Update bundled tools